Correction body propriete overflow sur page connexion

--- a/css/login-page.css
+++ b/css/login-page.css
@@ -91,3 +91,7 @@
     color: var(--red);
     text-decoration: none;
 }
+
+.body-container {
+    overflow: hidden;
+}
